@@ -7,6 +7,7 @@ Cacti CHANGELOG
 -bug: If the poller_output table is not empty, don't flood the log
 -bug: Remove warnings appear in the httpd log relative to reset attempts on settings array
 -feature: add graph title to graphs page
+-feature: add links to Graph Management and Data Sources to Device Edit Screen
 
 
 0.8.7b
